update if_script_trigger to real jagex syntax