@@ -2,11 +2,10 @@ package osrs.unpack.script;
 
 import osrs.unpack.ScriptTrigger;
 import osrs.unpack.Type;
-import osrs.unpack.Unpacker;
 
 import java.util.List;
 
-import static osrs.unpack.script.Command.IF_RUNSCRIPT;
+import static osrs.unpack.script.Command.IF_SCRIPT_TRIGGER;
 import static osrs.unpack.script.Command.PUSH_CONSTANT_INT;
 
 public class TriggerInference {
@@ -31,18 +30,11 @@ public class TriggerInference {
             } else if (type == Type.GCLIENTCLICKTILE) {
                 ScriptUnpacker.SCRIPT_TRIGGERS.put((int)expression.operand, ScriptTrigger.GCLIENTCLICKTILE);
             }
-        } else if (expression.command == IF_RUNSCRIPT) {
-            var ifScript = (int) expression.arguments.getFirst().operand;
-            var types = expression.arguments
-                    .subList(3, expression.arguments.size() - 1)
-                    .stream()
-                    .flatMap(e -> e.type.stream())
-                    .toList();
-
-            var existing = Unpacker.IF_SCRIPT_TYPE.put(ifScript, types);
-            if (existing != null && !types.equals(existing)) {
-                throw new IllegalStateException("if_runscript " + ifScript + " has conflicting types in script " + script + ", context: " + expression);
-            }
+        } else if (expression.command == IF_SCRIPT_TRIGGER) {
+            var unknown = (int) expression.arguments.get(0).operand;
+            var component = (int) expression.arguments.get(1).operand;
+            var signature = expression.arguments.subList(3, expression.arguments.size() - 1).stream().flatMap(e -> e.type.stream()).toList();
+            ScriptUnpacker.IF_SCRIPT_TRIGGERS.put(component, new ScriptUnpacker.ScriptTriggerInfo(component, unknown, signature));
         }
 
         // visit children
